updated frontend sandbox

--- a/dataviz/templates/sandbox3.html
+++ b/dataviz/templates/sandbox3.html
@@ -20,19 +20,7 @@
       </div>
     </div>
 
-      All front end pieces are located at in the dataviz folder. <br> <br>
-
-      Sandbox html pagers are located at dc_traffic_tickets/dataviz/templates <br>
-
-      CSS and JS assets are located at dc_traffic_tickets/dataviz/static/ <br>
-
-      All templates inherit from a base template which is located: <br>
-      dc_traffic_tickets/dc_traffic_tickets/templates/base.html <br>
-      <br>
-
-
-
-
+            {% include 'sandboxfiller.html' %}
 
       {% endblock content %}
 
