--- a/dataviz/templates/sandbox1.html
+++ b/dataviz/templates/sandbox1.html
@@ -17,16 +17,7 @@
       <header><h2>Sandbox1: Your Stuff Goes Here</h1></header>
     </div>
 
-      All front end pieces are located at in the dataviz folder. <br> <br>
-
-      Sandbox html pagers are located at dc_traffic_tickets/dataviz/templates <br>
-
-      CSS and JS assets are located at dc_traffic_tickets/dataviz/static/ <br>
-
-      All templates inherit from a base template which is located: <br>
-      dc_traffic_tickets/dc_traffic_tickets/templates/base.html <br>
-      <br>
-
+        {% include 'sandboxfiller.html' %}
 
       {% endblock content %}
 
