added user interface for resetting and renewing api auth keys and some instructions

--- a/dc_traffic_tickets/templates/users/user_detail.html
+++ b/dc_traffic_tickets/templates/users/user_detail.html
@@ -24,6 +24,7 @@
     <a class="btn btn-primary" href="{% url 'users:update' %}">My Info</a>
     <a class="btn btn-primary" href="{% url 'account_email' %}">E-Mail</a>
     <!-- Your Stuff: Custom user template urls -->
+    <a class="btn btn-primary" href="{% url 'users:apikey' %}">My Api Key</a>
   </div>
 
 </div>
@@ -33,4 +34,3 @@
 
 </div>
 {% endblock content %}
-
