added static assets

--- a/dataviz/templates/sandbox4.html
+++ b/dataviz/templates/sandbox4.html
@@ -21,8 +21,7 @@
     </div>
 
         {% include 'sandboxfiller.html' %}
-
-
+        {% include 'staticdata.html' %}
 
       {% endblock content %}
 
