--- a/dataviz/templates/sandbox1.html
+++ b/dataviz/templates/sandbox1.html
@@ -18,6 +18,7 @@
     </div>
 
         {% include 'sandboxfiller.html' %}
+        {% include 'staticdata.html' %}
 
       {% endblock content %}
 
