--- a/dataviz/templates/sandbox2.html
+++ b/dataviz/templates/sandbox2.html
@@ -21,6 +21,7 @@
     </div>
 
         {% include 'sandboxfiller.html' %}
+        {% include 'staticdata.html' %}
 
       {% endblock content %}
 
