fixed insexure map loading issue

--- a/dataviz/templates/heatmap.html
+++ b/dataviz/templates/heatmap.html
@@ -7,7 +7,7 @@
 
     {% block css %}
     {{ block.super }}
-    <link rel="stylesheet" href="https://cdn.leafletjs.com/leaflet-0.7/leaflet.css" />
+    <link rel="stylesheet" href="//cdn.leafletjs.com/leaflet-0.7/leaflet.css" />
     <link rel="stylesheet" href="static/css/dc-tickets.css" />
 
     {% endblock %}
@@ -34,8 +34,8 @@
 
 {% block javascript %}
 {{ block.super }}
-<script src="https://cdn.leafletjs.com/leaflet-0.7/leaflet.js"></script>
-<script src="https://leaflet.github.io/Leaflet.heat/dist/leaflet-heat.js"></script>
+<script src="//cdn.leafletjs.com/leaflet-0.7/leaflet.js"></script>
+<script src="//leaflet.github.io/Leaflet.heat/dist/leaflet-heat.js"></script>
 <script src="static/js/moving-violations-sampled.js"></script>
 <script src="static/js/leaflet.dc-parking-traffic-heatmap.js"></script>
 
