redid project wide js import

--- a/dc_traffic_tickets/templates/base.html
+++ b/dc_traffic_tickets/templates/base.html
@@ -116,7 +116,8 @@
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/js/bootstrap.min.js" integrity="sha384-vZ2WRJMwsjRMW/8U7i6PWi6AlO1L79snBrmgiDpgIWJ82z8eA5lenwvxbMV1PAh7" crossorigin="anonymous"></script>
 
       <!-- Your stuff: Third-party javascript libraries go here -->
-      <script src="static/js/project.js"></script>
+      <script src="{% static 'js/project.js' %}"></script>
+
     {% endblock javascript %}
   </body>
 </html>
