--- a/dataviz/templates/sandbox1.html
+++ b/dataviz/templates/sandbox1.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load leaflet_tags %}
 {% load static %}
 
     {% block title %}
@@ -7,27 +8,25 @@
 
     {% block css %}
     {{ block.super }}
-    <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7/leaflet.css" />
-    <link rel="stylesheet" href="static/css/dc-tickets.css" />
 
+    {% leaflet_css %}
+    <link rel="stylesheet" href="{% static 'css/single_day_leaflet.css' %}" />
+
+    {% leaflet_js %}
+    <script type="text/javascript" src="{% static 'js/api-call.js' %}"></script>
     {% endblock %}
-
+c
     {% block content %}
     <div class="content">
-      <header><h2>Sandbox1: Your Stuff Goes Here</h1></header>
+      <header><h2>Parking Tickets on 2013-12-20</h1></header>
     </div>
-
-        {% include 'sandboxfiller.html' %}
-        {% include 'staticdata.html' %}
-
+      {% leaflet_map "map" callback="window.map_init_basic" %}
       {% endblock content %}
+
 
 
 {% block javascript %}
 {{ block.super }}
 
 <!--  STATIC Content lives in same app folder -->
-<script src="static/js/moving-violations-sampled.js"></script>
-<script src="static/js/leaflet.dc-parking-traffic-heatmap.js"></script>
-
 {% endblock javascript %}
