--- a/dataviz/templates/sandbox4.html
+++ b/dataviz/templates/sandbox4.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% load static %}
+{% load leaflet_tags %}
 
     {% block title %}
       Sandbox
@@ -7,30 +8,32 @@
 
     {% block css %}
     {{ block.super }}
-    <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7/leaflet.css" />
-    <link rel="stylesheet" href="static/css/dc-tickets.css" />
+
+    <link rel="stylesheet" href="{% static 'css/dc-tickets.css' %}" />
+    {% leaflet_css %}
+     <style media="screen">
+       #dc { width:100%; height:100% }
+     </style>
+
 
     {% endblock %}
 
     {% block content %}
-    <div class="content">
-      <header><h2>Sandbox4: Your Stuff Goes Here</h1></header>
-      <div class="main-content">
-        <div id="map"></div>
+      <div class="content">
+        <header><h1 class="h1-header">DC Parking Tickets on for DC Plated Cars on 2013-12-26</h1></header>
+        <div class="main-content">
+          <div id="map"></div>
+        </div>
       </div>
-    </div>
-
-        {% include 'sandboxfiller.html' %}
-        {% include 'staticdata.html' %}
-
-      {% endblock content %}
+      {% leaflet_map "dc" %}
+    {% endblock content %}
 
 
 {% block javascript %}
 {{ block.super }}
 
 <!--  STATIC Content lives in same app folder -->
-<script src="static/js/moving-violations-sampled.js"></script>
-<script src="static/js/leaflet.dc-parking-traffic-heatmap.js"></script>
+{% leaflet_js %}
+<script src="{% static 'js/api-call.js' %}"></script>
 
 {% endblock javascript %}
