--- a/dc_traffic_tickets/templates/base.html
+++ b/dc_traffic_tickets/templates/base.html
@@ -1,4 +1,5 @@
 {% load staticfiles i18n %}
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -117,7 +118,6 @@
 
       <!-- Your stuff: Third-party javascript libraries go here -->
       <script src="{% static 'js/project.js' %}"></script>
-
     {% endblock javascript %}
   </body>
 </html>
