--- a/dc_traffic_tickets/templates/users/user_detail.html
+++ b/dc_traffic_tickets/templates/users/user_detail.html
@@ -25,9 +25,12 @@
     <a class="btn btn-primary" href="{% url 'account_email' %}">E-Mail</a>
     <!-- Your Stuff: Custom user template urls -->
     {% if request.user.is_staff %}
-      <a class="btn btn-primary" href="{% url 'users:apikey' %}">My Api Key</a>
       <a class="btn btn-primary" href="{% url 'explorer_playground' %}">SQL Explorer</a>
     {% endif %}
+    {% if request.user.is_authenticated %}
+      <a class="btn btn-primary" href="{% url 'users:apikey' %}">My Api Key</a>
+      <a class="btn btn-primary" href="{% url 'parkingviolations-list' %}">REST API Explorer</a>
+    {% endif %}  
   </div>
 
 </div>
