--- a/dc_traffic_tickets/templates/authtoken/token_form.html
+++ b/dc_traffic_tickets/templates/authtoken/token_form.html
@@ -1,7 +1,16 @@
 {% extends "base.html" %}
 {% load crispy_forms_tags %}
+{% load pygmentify_tags %}
+
+    {% block css %}
+    <link rel="stylesheet" href="{% pygmentify_css %}">
+    {{ block.super }}
+    {% endblock %}
+
 
 {% block title %}Your API Key{% endblock %}
+
+
 
 {% block content %}
     <h3>API Key</h3>
@@ -11,8 +20,20 @@
         {{ form|crispy }}
         <div class="control-group">
           <div class="controls">
+            {% if not form.key.value %}
+            <em>API Terms of Service</em> <br>
+            By agreeing and using this API, you agree to: <br>
+            * Be a general good person with this access and not abuse this API (ie: by making more than one request per 5 seconds); <br>
+            * Not doing anything illegal with this data; <br>
+            * Understand that this data might contain errors or omissions; <br>
+            * and hold this website, owner and/or contributors completely without fault, liability or responsibility for any losses, claims or damages which may arise because of the use of this data. <br><br>
+
+            <button type="submit" name="action" value="reset" class="btn btn-success">Agree and Create Token</button>
+
+            {% else %}
             <button type="submit" name="action" value="reset" class="btn btn-warning">Reset Token</button>
             <button type="submit" name="action" value="delete"  class="btn btn-danger">Delete Token</button>
+            {% endif %}
           </div>
         </div>
     </form>
@@ -20,25 +41,62 @@
 
     {% if form.key.value %}
 
-    <h5>  How to use the API: </h5>
-    <div>
-        <em>Command line: </em>
-        <br>
-        curl -X GET https://www.dctraffictickets.net/api/v1/parkingviolations/ -H 'Authorization: Token {{form.key.value}}'
-        <br><br>
-    </div>
+    <h4>How to interact with the API</h4>
+    <em>Some code snippets to get you started developing</em>
+    <br><br>
+      <div>
+          <h5>Python with the requests library: </h5>
+<br>
+          {% filter pygmentify %}
+          <pre class="python"><code>
+import requests
+url = 'https://www.dctraffictickets.net/api/v1/parkingviolations/'
+h = {'Authorization': 'Token: {{form.key.value}}'}
+r = requests.get(url, headers=h)
+data = r.json() # convert to python dictionary
+          </code></pre>
+          {% endfilter %}
+      </div>
+
 
       <div>
-          <em>Python with the requests library: </em>
-          <br>
-          import requests <br>
-          import pandas as pd <br>
-          url = 'https://www.dctraffictickets.net/api/v1/parkingviolations/' <br>
-          h = {'Authorization': 'Token: {{form.key.value}}'} <br>
-          r = requests.get(url, headers=h) <br>
-          data = r.json() # convert to python dictionary
-          <br><br>
+        <h5> Javascript with jquery</h5>
+<br>
+        {% filter pygmentify %}
+        <pre class="javascript"><code>
+$.ajaxSetup({headers: {"Authorization": "Token: {{form.key.value}}"}});
+$.ajax({
+   url: "../api/v1/parkingviolations/?rp_plate_state=DC&ticket_single_date=2015-05-30",
+   data: {
+      format: "json"
+   },
+   error: function() {
+      console.log('error');
+   },
+   dataType: "json",
+   success: function(data) {
+     console.log(data.response);
+     // do something cool here
+   },
+   type: "GET"
+});
+          </code></pre>
+          {% endfilter %}
+
       </div>
+
+    <div>
+        <h5>Command line: </h5>
+<br>
+        {% filter pygmentify %}
+        <pre class="Bash"><code>
+        curl -X GET https://www.dctraffictickets.net/api/v1/parkingviolations/ -H "Authorization: Token {{form.key.value}} \"
+          </code></pre>
+          {% endfilter %}
+    </div>
+
+
+
     {% endif %}
 
 
