--- a/dc_traffic_tickets/templates/base.html
+++ b/dc_traffic_tickets/templates/base.html
@@ -22,7 +22,7 @@
     <!-- Your stuff: Third-party css libraries go here -->
 
     <!-- This file store project specific CSS -->
-    <link href="{% static 'css/project.css' %}" rel="stylesheet">
+
 
     {% endblock %}
 
@@ -42,11 +42,12 @@
           <div class="collapse navbar-toggleable-xs" id="bs-navbar-collapse-1">
             <ul class="nav navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" href="{% url 'home' %}">Home</a>
+                <a class="nav-link" href="{% url 'about' %}">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="{% url 'about' %}">About</a>
               </li>
+              {% if request.user.is_authenticated %}
               <li class="nav-item">
                 <a class="nav-link" href="{% url 'sandbox1' %}">Sandbox1</a>
               </li>
@@ -59,6 +60,7 @@
               <li class="nav-item">
                 <a class="nav-link" href="{% url 'sandbox4' %}">Sandbox4</a>
               </li>
+              {% endif %}
             </ul>
 
             <ul class="nav navbar-nav pull-xs-right">
