--- a/blog/templates/blog/free_form_blog_page.html
+++ b/blog/templates/blog/free_form_blog_page.html
@@ -12,7 +12,7 @@
                   <div class="post-heading">
                       <h1>{{ page.title }}</h1>
                       <h2 class="subheading">{{ page.intro }}</h2>
-                      <span class="meta">Posted by <a href="{% url 'about' %}">{{ page.owner.first_name }}</a> on {{ page.date }}
+                      <span class="meta">Posted by <a href="{% url 'home' %}">{{ page.owner.first_name }}</a> on {{ page.date }}
                       {% if page.tags.all|length != 0 %}
                         in
                         {% for tag in page.tags.all %}
