--- a/blog/templates/blog/blog_page.html
+++ b/blog/templates/blog/blog_page.html
@@ -5,7 +5,7 @@
 {% block body_class %}template-blogpage{% endblock %}
 
 {% block header %}
-  <header class="intro-header" style="background-image: url({% static 'img/account_header.png' %})">
+  <header class="intro-header" style="background-image: url({% static 'img/profile_header.jpg' %})">
       <div class="container">
           <div class="row">
               <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
