--- a/dc_traffic_tickets/static/less/clean-blog.less
+++ b/dc_traffic_tickets/static/less/clean-blog.less
@@ -173,11 +173,11 @@ hr.small {
 	.site-heading,
 	.post-heading,
 	.page-heading {
-		padding: 100px 0 50px;
+		padding: 50px 0 50px;
 		color: white;
-		@media only screen and (min-width: 768px) {
-			padding: 150px 0;
-		}
+		// @media only screen and (min-width: 768px) {
+		// 	padding: 150px 0;
+		// }
 	}
 	.site-heading,
 	.page-heading {
