--- a/dc_traffic_tickets/static/less/clean-blog.less
+++ b/dc_traffic_tickets/static/less/clean-blog.less
@@ -175,9 +175,9 @@ hr.small {
 	.page-heading {
 		padding: 50px 0 50px;
 		color: white;
-		// @media only screen and (min-width: 768px) {
-		// 	padding: 150px 0;
-		// }
+		@media only screen and (min-width: 768px) {
+			padding: 125px 0;
+		}
 	}
 	.site-heading,
 	.page-heading {
@@ -196,7 +196,7 @@ hr.small {
 		}
 		@media only screen and (min-width: 768px) {
 			h1 {
-				font-size: 80px;
+				font-size: 70px;
 			}
 		}
 	}
